[project]
name = "voicemail-processor-agent"
version = "0.0.1"
description = "voicemail-processor-agent"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
dependencies = [
    "uipath-langchain>=0.0.106",
    "langchain-anthropic>=0.3.8",
    "whisper>=1.1.10",
]
requires-python = ">=3.10"
